Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31990

Android: NDK list not cleared after removing Sdk folder

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • None
    • Qt Creator 15.0.0-rc1
    • Android Support
    • None
    • dde4b3e69 (master)

    Description

      To reproduce:
      1. Open Creator.
      2. Open Preferences | Devices | Android and ensure you see items on NDK list.
      3. Close preferences and manually delete ~/Android/Sdk folder
      4. Redo point 2 - now you the NDK list should be empty, but it's the same as before.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-31990
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes