Android: Delete old packages when sdk command failed

Fixes: QTCREATORBUG-31990
Change-Id: I50cb2f1e26ecb11a86206d1900ae519b05ba21b3
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>