src/plugins/android/androidsdkmanager.cpp
@@ -538,6 +538,8 @@ void AndroidSdkManagerPrivate::reloadSdkPackages()
 
     if (AndroidConfig::sdkToolsVersion().isNull()) {
         // Configuration has invalid sdk path or corrupt installation.
+        qDeleteAll(m_allPackages);
+        m_allPackages.clear();
         emit m_sdkManager.packagesReloaded();
         return;
     }
